# relics-ord

./: Cargo.toml  README.md  batch.yaml  rust-toolchain.toml
.github/workflows/: ci.yaml  release.yaml
crates/mockcore/src/: lib.rs  state.rs
crates/relics/: Cargo.toml  README.md
crates/relics/src/: artifact.rs  cenotaph.rs  enshrining.rs  flaw.rs  keepsake.rs  lib.rs  pool.rs  relic.rs  spaced_relic.rs  swap.rs  transfer.rs
crates/relics/src/keepsake/: flag.rs  message.rs  tag.rs
docs/: book.toml  index.css
docs/src/: SUMMARY.md  contributing.md  disclaimer.md  donate.md  overview.md  relics.md
src/: api.rs  chain.rs  index.rs  lib.rs  options.rs  outgoing.rs  relics.rs  settings.rs  subcommand.rs  templates.rs  test.rs  wallet.rs
src/index/: entry.rs  event.rs  testing.rs  updater.rs
src/inscriptions/: media.rs
src/subcommand/: list.rs  relic_balances.rs  relics.rs  server.rs  wallet.rs
src/templates/: block.rs  home.rs  inscription.rs  output.rs  relic.rs  relic_events.rs  relics.rs  sealing.rs  sealings.rs  status.rs  transaction.rs
src/wallet/: batch.rs  transaction_builder.rs  wallet_constructor.rs
static/: index.css
templates/: address-events.html  block.html  inscription.html  output.html  page.html  relic-events.html  relic.html  relics.html  sealing.html  sealings.html  status.html
tests/: json_api.rs  lib.rs  server.rs  settings.rs  version.rs  wallet.rs
tests/wallet/: addresses.rs  authentication.rs  balance.rs  batch_command.rs  burn.rs  inscriptions.rs  mint.rs  outputs.rs  relics.rs  selection.rs  send.rs  split.rs
(+28 files in other folders)
