[package]
name = "relics"
version = "0.0.1"
edition = "2021"

[dependencies]
ordinals = { version = "0.0.12", path = "../ordinals" }
bitcoin = { version = "0.32.3", features = ["rand"] }
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_with = "3.7.0"
serde_yaml = "0.9.17"
thiserror = "2.0.0"
ciborium = "0.2.1"

[dev-dependencies]
serde_json = { version = "1.0.81", features = ["preserve_order"] }
pretty_assertions = "1.2.1"
